@@ -216,7 +216,7 @@ class SLPHeaderV1 extends SrvLocHeader implements Cloneable {
 				ServiceLocationException.PARSE_ERROR,
 				"function_code_error",
 				new Object[] {
-		    new Integer(functionCode)});
+		    Integer.valueOf(functionCode)});
 
 	}
 
@@ -228,7 +228,7 @@ class SLPHeaderV1 extends SrvLocHeader implements Cloneable {
 				ServiceLocationException.PARSE_ERROR,
 				"length_overflow",
 				new Object[] {
-		    new Integer(nbytes), new Integer(length)});
+		    Integer.valueOf(nbytes), Integer.valueOf(length)});
 
 	}
 
