@@ -181,7 +181,7 @@ class SLPServerHeaderV2 extends SLPHeaderV2  implements Cloneable {
 				ServiceLocationException.PARSE_ERROR,
 				"function_code_error",
 				new Object[] {
-		    new Integer(functionCode)});
+		    Integer.valueOf(functionCode)});
 
 	}
 
@@ -193,7 +193,7 @@ class SLPServerHeaderV2 extends SLPHeaderV2  implements Cloneable {
 				ServiceLocationException.PARSE_ERROR,
 				"length_overflow",
 				new Object[] {
-		    new Integer(nbytes), new Integer(length)});
+		    Integer.valueOf(nbytes), Integer.valueOf(length)});
 
 	}
 
